--- a/css/index.css
+++ b/css/index.css
@@ -89,6 +89,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  border: 1px solid black;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -135,5 +136,72 @@ body {
   height: 100%;
 }
 body {
-  background: red;
+  font-size: 62.5%;
+  width: 60% ;
+  margin: 0 auto;
+}
+nav {
+  font-size: 1.4em;
+  text-align: right;
+  display: flex;
+  justify-content: flex-end;
+}
+nav a {
+  margin: 2% ;
+  color: black;
+  text-decoration: none;
+}
+header {
+  background: lightblue;
+  padding-left: 3%;
+}
+header img {
+  width: 20% ;
+}
+header div h1 {
+  font-size: 3.5em;
+}
+header div h6 {
+  font-size: 2em;
+  border-bottom: 1px dotted black;
+  margin: 3% 0 3% ;
+  padding-bottom: 3%;
+}
+header div p {
+  font-size: 1.5em;
+}
+header div button {
+  background: gray ;
+  color: white;
+  border: none;
+  border-radius: 5px ;
+  font-weight: bold;
+  padding: 2% ;
+  margin: 2% 0 7% ;
+}
+.topPart {
+  display: flex ;
+  flex-flow: nowrap;
+  justify-content: space-around;
+}
+.listenUp {
+  width: 48% ;
+}
+.listenUp h2 {
+  font-size: 2.5em;
+  padding: 5% 0 3% ;
+}
+.listenUp p {
+  font-size: 1.5em;
+  padding: 0 0 5%;
+}
+.stuffImGoodAt {
+  width: 48% ;
+}
+.stuffImGoodAt h3 {
+  font-size: 2.2em;
+  padding: 6% 0 3% ;
+}
+.stuffImGoodAt p {
+  padding-left: 9%;
 }
