--- a/css/index.css
+++ b/css/index.css
@@ -89,7 +89,6 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  border: 1px solid black;
 }
 /* HTML5 display-role reset for older browsers */
 article,
@@ -140,11 +139,22 @@ body {
   width: 60% ;
   margin: 0 auto;
 }
+@media (max-width: 500px) {
+  body {
+    width: 100% ;
+  }
+}
 nav {
   font-size: 1.4em;
   text-align: right;
   display: flex;
   justify-content: flex-end;
+}
+@media (max-width: 500px) {
+  nav {
+    justify-content: space-around;
+    background-color: lightblue;
+  }
 }
 nav a {
   margin: 2% ;
@@ -153,10 +163,19 @@ nav a {
 }
 header {
   background: lightblue;
-  padding-left: 3%;
 }
 header img {
-  width: 20% ;
+  width: 70% ;
+  margin: 3% ;
+}
+@media (max-width: 500px) {
+  header img {
+    width: 100%;
+    margin: 0;
+  }
+}
+header div {
+  padding-left: 3%;
 }
 header div h1 {
   font-size: 3.5em;
@@ -182,14 +201,25 @@ header div button {
 .topPart {
   display: flex ;
   flex-flow: nowrap;
-  justify-content: space-around;
+  justify-content: space-between;
+}
+@media (max-width: 500px) {
+  .topPart {
+    flex-direction: column;
+  }
 }
 .listenUp {
   width: 48% ;
 }
+@media (max-width: 500px) {
+  .listenUp {
+    width: 100%;
+  }
+}
 .listenUp h2 {
   font-size: 2.5em;
   padding: 5% 0 3% ;
+  font-weight: bold;
 }
 .listenUp p {
   font-size: 1.5em;
@@ -198,10 +228,53 @@ header div button {
 .stuffImGoodAt {
   width: 48% ;
 }
-.stuffImGoodAt h3 {
-  font-size: 2.2em;
-  padding: 6% 0 3% ;
+@media (max-width: 500px) {
+  .stuffImGoodAt {
+    width: 100% ;
+  }
 }
-.stuffImGoodAt p {
-  padding-left: 9%;
+.stuffImGoodAt h3 {
+  font-size: 2em;
+  padding: 6% 0 3% ;
+  font-weight: bold;
+}
+.stuffImGoodAt ol li {
+  padding: 3%;
+  font-size: 1.5em;
+  border: 1px solid lightgray ;
+}
+.workHistory h3 {
+  font-size: 2em;
+  margin: 5% 0 2% ;
+  font-weight: bold;
+}
+.workHistory table {
+  border: 1px solid lightgray;
+  width: 100% ;
+}
+.workHistory table tr {
+  font-size: 1.5em;
+}
+.workHistory table tr th {
+  border: 1px solid lightgray;
+  padding: 3% ;
+  text-align: left ;
+}
+.workHistory table tr th:first-child {
+  font-weight: bold;
+}
+.workHistory table tr:first-child {
+  font-weight: bold;
+}
+.workHistory table tr:nth-child(2),
+.workHistory table tr:nth-child(4) {
+  background: #d0e7ee;
+}
+footer {
+  text-align: center;
+  color: white ;
+  background: gray;
+  margin-top: 5% ;
+  padding: 3% 0 5%;
+  font-size: 1.3em;
 }
